# gradient-descent-for-Runst

./: .gitignore  Cargo.toml  README.md  gradient_descent.c  gradient_descent.rs  makefile  run.sh
include/: gradient_descent.h  network_parameters.h
include/calculations/: addition.h  multiplication.h  substraction.h
src/: cache.rs  gradiante_descent.rs  graph.rs  main.rs
src/gradiante_descent/: calculations.rs
src/gradiante_descent/calculations/: addition.rs  multiplication.rs  substraction.rs
srcc/: gradient_descent.c  main.c
srcc/calculations/: addition.c  multiplication.c  substraction.c
